actual last commit, fixed misalignment of photographs, and added header.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+p {
+    font-family: Raleway;
+    margin-left: 1.66%;
+    font-size: 23px;
+    font-weight: 800;
+    text-transform: uppercase;
+    border-bottom: 1px solid lightgray;
+    width: 30%;
+    padding-bottom: 20px;
+}
+
 img {
     width: 30%;
     height: 300px;
